# rinhadev-fastapi

./: Makefile  README.md  pyproject.toml  setup.cfg
app/: __main__.py  application.py  settings.py
app/api/: router.py
app/api/docs/: __init__.py  views.py
app/api/healthcheck/: __init__.py  views.py
