[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["matheuslr <matheuslr27@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
ddtrace = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.6.0"
pytest-deadfixtures = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
indent='    '
line_length=90

use_parentheses=true
multi_line_output=3
include_trailing_comma=true

